2009.07.01

* Updated TODO.
* Updated the admin defs to use the right google username.
* Applied a fix for graphs on Windows machines (colons in filenames causing
problems); patch supplied by Dennis Fortin.

2009.03.30

* Added update function to bindings wrapper.
* Stubbed out fetch, dump, and load functions.
* Added a graph function to the bindings wrapper.
* Added dump and load functions to the bindings wrapper.
* Added fetch wrapper for bindings.
* Completely rearranged the info method/function/dispatch for symmetry between
the two backends.
* Added an info wrapper for bindings.
* Finished touching up the bindings dispatcher.
* Added doctests for bindings-enabled RRD to the bindings module.
* Updated the README with a note about using the Graph class with the Python
bindings.
* Cleaned up an outdated docstring.
Updated the "Features" and "Introduction" sections of the README.
* Fixed typo in kwds dict (Mladen Milankovic).
* Updated acknowledgements.

2009.03.29

* Created a branch for doing the python RRDtool bindings integration.
* Added admin scripts for convenient branch management.
* Updated TODO.
* Added doctest for buildParameters.
* Updated the RRD class to take a backend parameter in the constructor and
modified the class to reference this assigned attribute in the rest of its
methods.
* Started putting together the bindings module.
* Cleaned up the part of the README that has the new bindings instructions in
it.
* Updated the Graph class to take a backend parameter in its constructor.
* Updated the README to include how to use graph.Graph with the python bindings
backend.
* Renamed backend.py to common.py for a container of backend functions that are
common to both types.
* Moved coerce and iterparse into common.
* Cleaned up imports.
* Fixed bindings.buildParameters and moved it into common.
* Updated external.buildParameters to use the one from common.

2009.03.26

* Moved meta data out of setup.py and into pyrrd.meta.